# pretraining-saliency-downstream-classifiers

./: .gitignore  README.md  future.md  plan.md  pyproject.toml
artifacts/metrics/: encoder_prep_report.json  encoder_prep_report_notebook.json
artifacts/metrics/faithfulness/: seed_level_scores.csv  wilcoxon_paired_stats_primary.csv
artifacts/metrics/faithfulness_repro_seed0/: condition_summary.csv  insertion_deletion_auc_primary_seed0.csv  seed_level_scores.csv  test_accuracy_seed0.csv
artifacts/metrics/gradcampp_diagnostics/: condition_level_deltas.csv  diagnostics_note.json  outcome_label.json  seed_level_deltas.csv  (+1 more)
configs/: data.yaml  explainability.yaml  paths.yaml  probes.yaml
docs/: 02-03-downstream-trainings-and-split.md  04-trainprobes.md  05-06-explainability.md  07-eval-explain.md  08-opt-fine-tuning.md  09-gradCam++.md  README.md  requirements.md  saliency-analysis-deep-dive.md  saliency.md  training-specification.md
docs/stage01/: 01-encoder-prep.md  results.md
impl-stages/: 01-encoder-prep.md  05-06-explainability.md  07-eval-explain.md  README.md  index.md
notebooks/: 05_generate_explanations.ipynb  06_explainability_qc.ipynb  07_eval_explanations.ipynb  analysis.ipynb  run.ipynb  stages_07_09.ipynb
scripts/: compute_wilcoxon_stats.py  export_eval_subset.py  generate_explanations.py  inspect_encoders.py  make_splits.py  prepare_encoders.py  qc_explanations.py  run_probe_grid.py  summarize_probe_results.py  train_linear_probe.py
scripts/sharcnet/: sbatch_gpu_probe_pipeline.sh
src/cv/: __init__.py  config.py  constants.py  transforms.py
(+109 files in other folders)
